<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.viaoa</groupId>
  <artifactId>oa-core</artifactId>
  <version>3.7.12</version>
  <packaging>jar</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>
        Core Object Automation library
    </description>

  <organization>
    <name>ViaOA</name>
    <url>www.viaoa.com</url>
  </organization>

  <scm>
    <connection>scm:git:https://github.com/ViaOA/oa-core.git</connection>
    <developerConnection>scm:git:https://github.com/ViaOA/oa-core.git</developerConnection>
    <url>https://github.com/ViaOA/oa-core/tree/master</url>
  </scm>
  <url>http://www.viaoa.com</url>
  <inceptionYear>1999</inceptionYear>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <developers>
    <developer>
      <name>Vince Via</name>
      <email>vvia@viaoa.com</email>
      <organization>Via Object Architects</organization>
      <organizationUrl>http://www.viaoa.com</organizationUrl>
    </developer>
  </developers>

  <repositories>
  </repositories>

  <distributionManagement>
    <repository>
      <id>central</id>
      <url>https://central.sonatype.com/api/v1/publish</url>
    </repository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>javax.mail</groupId>
      <artifactId>mail</artifactId>
      <version>1.4.7</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.15.0</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.13.4.2</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>2.13.4</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
      <version>2.13.4</version>
    </dependency>

    <dependency>
      <groupId>javax.json</groupId>
      <artifactId>javax.json-api</artifactId>
      <version>1.1.4</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1.4</version>
    </dependency>


    <!-- might want to remove jaxb -->
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>4.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>4.0.1</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <!-- <dependency> <groupId>com.microsoft.sqlserver</groupId> <artifactId>mssql-jdbc</artifactId> 
      <version>6.4.0.jre8</version> <scope>test</scope> </dependency> -->

  </dependencies>


  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/*.gif/**</include>
          <include>**/*.jpg/**</include>
          <include>**/*.png/**</include>
          <include>**/*.css/**</include>
          <include>**/*.ht*/**</include>
          <include>**/*.pro*/**</include>
          <include>**/*.sql/**</include>
          <include>**/*.xml/**</include>
          <include>**/help/**</include>
          <include>**/*.jks/**</include>
        </includes>
        <excludes>
          <exclude>**/doc-files/**</exclude>
          <exclude>**/package.html/**</exclude>
          <exclude>**/overview.html/**</exclude>
        </excludes>
      </resource>
    </resources>

    <!-- qqqq not needed, this is the default for mvn <testResources> <testResource> 
      <directory>src/test/resources</directory> <includes> <include>**/*</include> 
      </includes> </testResource> </testResources> qqqqqqqq -->

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <release>8</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.14.1</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
          <executions>
            <execution>
              <id>default-jar</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>        
        <configuration>
          <archive>
            <manifestFile>manifest.mf</manifestFile>
            <manifestEntries>
              <Implementation-Title>OA-CORE</Implementation-Title>
              <Implementation-Vendor>ViaOA</Implementation-Vendor>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jarsigner-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>sign</id>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <keystore>${keystore.path}</keystore>
          <alias>${keystore.alias}</alias>
          <storepass>${keystore.store.password}</storepass>

          <!-- 20230916 qqq no longer online ..... 
            <tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa> <tsa>http://timestamp.digicert.com</tsa> 
            try this new one time qqq -->
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <failOnError>false</failOnError>
              <additionalOptions>-Xdoclint:none</additionalOptions>
              <doclint>none</doclint>
              <author>true</author>
              <windowtitle>OA Java Code Documentation</windowtitle>
              <header>OA by ViaOA, Inc.</header>
              <splitindex>true</splitindex>
              <overview>src/main/java/com/viaoa/overview.html</overview>
              <footer>&lt;small&gt;&amp;copy
                ${project.inceptionYear}-$project.{currentYear} ViaOA,
                Inc. All
                rights reserved&lt;small&gt;</footer>
              <excludePackageNames>com.viaoa.test.*</excludePackageNames>
            </configuration>
          </execution>
        </executions>
      </plugin>


      <!--  
        uses GnuGP windows 
        powershell cd C:\Program Files (x86)\GnuPG\bin gpgconf -Qqq-launch gpg-agent 
        see:  .m2/settings.xml 
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- deploy on maven central, run mvn clean deploy -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
